--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "express": "^4.18.1",
     "init": "^0.1.2",
-    "mongoose": "^6.3.6"
-  }
+    "mongoose": "^6.3.6",
+    "nodemon": "^2.0.16"
+  },
+  "scripts": {"start":"nodemon index.js"}
 }
